tests/invalid/generated_binop_bitor_float_bool/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: float = 1.0
    y: bool = True
    z = x | y
